# journal-app

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  fly.toml  profile_handlers.rs  render.yaml  setup-codespace.sh  setup.ps1  setup.sh  vercel.json
.devcontainer/: devcontainer.json
migrations/: 001_initial.sql
src/: auth.rs  database.rs  main.rs  models.rs
src/handlers/: api.rs  auth.rs  home.rs  journals.rs  mod.rs  users.rs  users_new.rs
src/templates/: mod.rs
static/: style.css
templates/: base.html  home.html  home_new.html  journal_edit.html  journal_list.html  journal_list_new.html  journal_new.html  journal_new_updated.html  journal_show.html  journal_show_new.html  login.html  login_new.html  my_journals.html  profile.html  profile_edit.html  profile_new.html  register.html  register_new.html
