[package]
name = "journal-app"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Dwi Nugroho <adityadvv@gmail.com>"]
description = "A minimalist journal/blogging platform built with Rust, featuring rich text editing, user authentication, and social features"
repository = "https://github.com/AdityaDwiNugroho/journal-app"
license = "MIT"
keywords = ["journal", "blog", "web", "rust", "axum"]
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"
homepage = "https://github.com/AdityaDwiNugroho/journal-app"

[funding]
url = "https://trakteer.id/adityadwinugroho"

[dependencies]
# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
